# MarsSimulator

./: CMakeLists.txt  GeoTIFFReader.cpp  GeoTIFFReader.h  MarsWithCameraModel.cpp  MarsWithCameraModel.h  cray.h  directlight.cpp  directlight.h  main.cpp  perspectiveCamera.cpp  perspectiveCamera.h  pointlight.cpp  pointlight.h
